--- a/configure.ac
+++ b/configure.ac
@@ -188,7 +188,7 @@ AS_IF([test AS_VAR_GET(x_cv_linux_so_peercred) = yes],
 
 if test "x$GCC" = "xyes"; then
   :
-  AC_SUBST(WARNINGOPTS, ['-Wall -Werror'])
+  AC_SUBST(WARNINGOPTS, ['-Wall -Werror -Wpointer-arith'])
 else
   :
   AC_SUBST(WARNINGOPTS, [])
