Try to ensure a C99 compiler.
Some still-supported Linux distributions (Debian jessie and Ubuntu 14.04
at least) still use GCC 4, where C99 isn't the default.

For autoconf, we do it the autotools way. For the standalone Makefiles,
we go for -std=gnu99 rather than c99, to avoid trouble with fdopen().

--- a/configure.ac
+++ b/configure.ac
@@ -1,5 +1,5 @@
 # To compile this into a configure script, you need:
-# * Autoconf 2.50 or newer
+# * Autoconf 2.59c or newer
 # * Gtk (for $prefix/share/aclocal/gtk.m4)
 # * Automake (for aclocal)
 # If you've got them, running "autoreconf" should work.
@@ -16,6 +16,8 @@ AC_PROG_INSTALL
 AC_PROG_RANLIB
 ifdef([AM_PROG_AR],[AM_PROG_AR])
 AM_PROG_CC_C_O
+
+AC_PROG_CC_C99
 
 # Mild abuse of the '--enable' option format to allow manual
 # specification of setuid or setgid setup in pterm.
