Add .rcpp files to .gitignore.
This should have been done months ago in commit bf0cf984c, but I've
been indecisive about whether to keep my local dev builds in the
windows subdirectory itself or one level further down...

--- a/.gitignore
+++ b/.gitignore
@@ -127,6 +127,7 @@
 /windows/*.tds
 /windows/*.td2
 /windows/*.map
+/windows/*.rcpp
 /windows/Makefile.clangcl
 /windows/Makefile.mgw
 /windows/Makefile.vc
