Fix build failures under GTK 1.
My previous dodge to make the GTK 1 headers work with modern compilers
was to manually reset to -std=gnu89, which changed the semantics of
'inline' back to what glib.h was expecting. But that doesn't work now
the PuTTY code base expects to be able to use the rest of C99, so
instead I have to manually override the specific #defines that glib.h
uses to know how 'inline' works.

Also, moved that code in configure.ac out of the fallback branch that
manually detects GTK1, so that it will fire even if autoconf is run on
a system that still has the genuine GTK1 detection code. (Amazingly,
one still exists that I have access to!)

With that fixed, there's one more problem: the nethack_mode and
app_keypad_mode flags in gtkwin.c's key_event() are only used in the
GTK >= 2 branch of the ifdefs, so they should only be declared and set
in that branch as well, on pain of a -Wunused complaint.

--- a/configure.ac
+++ b/configure.ac
@@ -122,15 +122,26 @@ case "$gtk_version_desired:$gtk" in
     # manual check for gtk1
     AC_PATH_PROG(GTK1_CONFIG, gtk-config, absent)
     if test "$GTK1_CONFIG" != "absent"; then
-      # the gtk1 headers need -std=gnu89, which flips round the
-      # definitions of 'inline' and 'extern inline' to their old GNU
-      # semantics before C99 chose different ones
-      GTK_CFLAGS="`"$GTK1_CONFIG" --cflags` -std=gnu89"
+      GTK_CFLAGS="`"$GTK1_CONFIG" --cflags`"
       GTK_LIBS=`"$GTK1_CONFIG" --libs`
+      AC_SUBST(GTK_CFLAGS)
+      AC_SUBST(GTK_LIBS)
       gtk=1
     fi
     ])
     ;;
+esac
+
+case "$gtk" in
+  1)
+    # Add some manual #defines to make the GTK 1 headers work when
+    # compiling in C99 mode. Left to themselves, they'll expect the
+    # old-style pre-C99 GNU semantics of 'inline' and 'extern inline',
+    # with the effect that they'll end up defining out-of-line
+    # versions of the inlined functions in more than one translation
+    # unit and cause a link failure. Override them to 'static inline',
+    # which is safe.
+    GTK_CFLAGS="$GTK_CFLAGS -DG_INLINE_FUNC='static inline' -DG_CAN_INLINE=1"
 esac
 
 AM_CONDITIONAL(HAVE_GTK, [test "$gtk" != "none"])
