--- a/windows/pscp.rc
+++ b/windows/pscp.rc
@@ -1,7 +1,7 @@
 #include "rcstuff.h"
 
 #define APPNAME "PSCP"
-#define APPDESC "Command-line SCP/SFTP client"
+#define APPDESC "√¸¡Ó–– SCP/SFTP øÕªß∂À"
 
 200 ICON "pscp.ico"
 
