--- a/windows/putty.rc
+++ b/windows/putty.rc
@@ -1,7 +1,7 @@
 #include "rcstuff.h"
 
 #define APPNAME "PuTTY"
-#define APPDESC "SSH, Telnet and Rlogin client"
+#define APPDESC "SSH、Telnet 和 Rlogin 客户端"
 
 #include "winhelp.rc2"
 #include "win_res.rc2"
