--- a/windows/puttygen.rc
+++ b/windows/puttygen.rc
@@ -5,7 +5,7 @@
 #include "rcstuff.h"
 
 #define APPNAME "PuTTYgen"
-#define APPDESC "PuTTY SSH key generation utility"
+#define APPDESC "PuTTY SSH 密钥生成工具"
 
 #include "winhelp.rc2"
 
@@ -13,42 +13,42 @@
 
 201 DIALOG DISCARDABLE 0, 0, 318, 270
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
-CAPTION "PuTTY Key Generator"
-FONT 8, "MS Shell Dlg"
+CAPTION "PuTTY 密钥生成器"
+FONT 9, "宋体"
 BEGIN
 END
 
 210 DIALOG DISCARDABLE 0, 0, 140, 60
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
-CAPTION "PuTTYgen: Enter Passphrase"
-FONT 8, "MS Shell Dlg"
+CAPTION "PuTTYgen: 输入密码"
+FONT 9, "宋体"
 BEGIN
-    CTEXT "Enter passphrase for key", 100, 10, 6, 120, 8
+    CTEXT "请输入密钥的密码", 100, 10, 6, 120, 8
     CTEXT "", 101, 10, 16, 120, 8
     EDITTEXT 102, 10, 26, 120, 12, ES_PASSWORD | ES_AUTOHSCROLL
-    DEFPUSHBUTTON "O&K", IDOK, 20, 42, 40, 14
-    PUSHBUTTON "&Cancel", IDCANCEL, 80, 42, 40, 14
+    DEFPUSHBUTTON "确定(&K)", IDOK, 20, 42, 40, 14
+    PUSHBUTTON "取消(&C)", IDCANCEL, 80, 42, 40, 14
 END
 
 /* Accelerators used: cl */
 213 DIALOG DISCARDABLE 140, 40, 270, 136
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
-CAPTION "About PuTTYgen"
-FONT 8, "MS Shell Dlg"
+CAPTION "关于 PuTTYgen"
+FONT 9, "宋体"
 BEGIN
-    DEFPUSHBUTTON "&Close", IDOK, 216, 118, 48, 14
-    PUSHBUTTON "View &Licence", 101, 6, 118, 70, 14
-    PUSHBUTTON "Visit &Web Site", 102, 140, 118, 70, 14
+    DEFPUSHBUTTON "关闭(&C)", IDOK, 216, 118, 48, 14
+    PUSHBUTTON "查看许可证(&L)", 101, 6, 118, 70, 14
+    PUSHBUTTON "访问网站 (&W)", 102, 140, 118, 70, 14
     EDITTEXT 1000, 10, 6, 250, 110, ES_READONLY | ES_MULTILINE | ES_CENTER, WS_EX_STATICEDGE
 END
 
 /* No accelerators used */
 214 DIALOG DISCARDABLE 50, 50, 326, 239
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
-CAPTION "PuTTY Licence"
-FONT 8, "MS Shell Dlg"
+CAPTION "PuTTY 许可证"
+FONT 9, "宋体"
 BEGIN
-    DEFPUSHBUTTON "OK", IDOK, 148, 219, 44, 14
+    DEFPUSHBUTTON "确定", IDOK, 148, 219, 44, 14
 
     EDITTEXT 1000, 10, 10, 306, 200, ES_READONLY | ES_MULTILINE | ES_LEFT, WS_EX_STATICEDGE
 END
