--- a/windows/puttygen.rc
+++ b/windows/puttygen.rc
@@ -8,6 +8,7 @@
 #define APPDESC "PuTTY SSH key generation utility"
 
 #include "winhelp.rc2"
+#include "puttygen-rc.h"
 
 200 ICON "puttygen.ico"
 
@@ -51,6 +52,31 @@ BEGIN
     DEFPUSHBUTTON "OK", IDOK, 148, 219, 44, 14
 
     EDITTEXT 1000, 10, 10, 306, 200, ES_READONLY | ES_MULTILINE | ES_LEFT, WS_EX_STATICEDGE
+END
+
+215 DIALOG DISCARDABLE 0, 0, 240, 84
+STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
+CAPTION "PuTTYgen: Private Key File Parameters"
+FONT 8, "MS Shell Dlg"
+BEGIN
+    LTEXT "PPK file version:", IDC_PPKVER_STATIC, 5, 6, 115, 8
+    AUTORADIOBUTTON "2", IDC_PPKVER_2, 120, 5, 30, 10, WS_GROUP
+    AUTORADIOBUTTON "3", IDC_PPKVER_3, 150, 5, 30, 10
+    LTEXT "Memory to use for password hash:", IDC_ARGON2_MEM_STATIC,
+        5, 22, 115, 8
+    EDITTEXT IDC_ARGON2_MEM, 120, 20, 40, 12
+    LTEXT "Kb", IDC_ARGON2_MEM_STATIC2,
+        170, 22, 20, 8
+    LTEXT "Time to use for password hash:", IDC_ARGON2_TIME_STATIC,
+        5, 36, 115, 8
+    EDITTEXT IDC_ARGON2_TIME, 120, 34, 40, 12
+    AUTORADIOBUTTON "ms", IDC_PPK_AUTO_YES, 170, 35, 20, 10, WS_GROUP
+    AUTORADIOBUTTON "passes", IDC_PPK_AUTO_NO, 200, 35, 40, 10
+    LTEXT "Parallelism for password hash:", IDC_ARGON2_PARALLEL_STATIC,
+        5, 50, 115, 8
+    EDITTEXT IDC_ARGON2_PARALLEL, 120, 48, 60, 12
+    DEFPUSHBUTTON "O&K", IDOK, 70, 66, 40, 14
+    PUSHBUTTON "&Cancel", IDCANCEL, 130, 66, 40, 14
 END
 
 #include "version.rc2"
