--- a/windows/puttygen.rc
+++ b/windows/puttygen.rc
@@ -54,7 +54,7 @@ BEGIN
     EDITTEXT 1000, 10, 10, 306, 200, ES_READONLY | ES_MULTILINE | ES_LEFT, WS_EX_STATICEDGE
 END
 
-215 DIALOG DISCARDABLE 0, 0, 240, 84
+215 DIALOG DISCARDABLE 0, 0, 255, 98
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "PuTTYgen: Private Key File Parameters"
 FONT 8, "MS Shell Dlg"
@@ -62,21 +62,24 @@ BEGIN
     LTEXT "PPK file version:", IDC_PPKVER_STATIC, 5, 6, 115, 8
     AUTORADIOBUTTON "2", IDC_PPKVER_2, 120, 5, 30, 10, WS_GROUP
     AUTORADIOBUTTON "3", IDC_PPKVER_3, 150, 5, 30, 10
+    LTEXT "Key derivation function:", IDC_KDF_STATIC, 5, 22, 115, 8
+    AUTORADIOBUTTON "Argon2id", IDC_KDF_ARGON2ID, 120, 21, 45, 10, WS_GROUP
+    AUTORADIOBUTTON "Argon2i", IDC_KDF_ARGON2I, 165, 21, 45, 10, WS_GROUP
+    AUTORADIOBUTTON "Argon2d", IDC_KDF_ARGON2D, 210, 21, 45, 10
     LTEXT "Memory to use for password hash:", IDC_ARGON2_MEM_STATIC,
-        5, 22, 115, 8
-    EDITTEXT IDC_ARGON2_MEM, 120, 20, 40, 12
-    LTEXT "Kb", IDC_ARGON2_MEM_STATIC2,
-        170, 22, 20, 8
-    LTEXT "Time to use for password hash:", IDC_ARGON2_TIME_STATIC,
         5, 36, 115, 8
-    EDITTEXT IDC_ARGON2_TIME, 120, 34, 40, 12
-    AUTORADIOBUTTON "ms", IDC_PPK_AUTO_YES, 170, 35, 20, 10, WS_GROUP
-    AUTORADIOBUTTON "passes", IDC_PPK_AUTO_NO, 200, 35, 40, 10
-    LTEXT "Parallelism for password hash:", IDC_ARGON2_PARALLEL_STATIC,
+    EDITTEXT IDC_ARGON2_MEM, 120, 34, 40, 12
+    LTEXT "Kb", IDC_ARGON2_MEM_STATIC2, 170, 36, 34, 8
+    LTEXT "Time to use for password hash:", IDC_ARGON2_TIME_STATIC,
         5, 50, 115, 8
-    EDITTEXT IDC_ARGON2_PARALLEL, 120, 48, 60, 12
-    DEFPUSHBUTTON "O&K", IDOK, 70, 66, 40, 14
-    PUSHBUTTON "&Cancel", IDCANCEL, 130, 66, 40, 14
+    EDITTEXT IDC_ARGON2_TIME, 120, 48, 40, 12
+    AUTORADIOBUTTON "ms", IDC_PPK_AUTO_YES, 170, 49, 20, 10, WS_GROUP
+    AUTORADIOBUTTON "passes", IDC_PPK_AUTO_NO, 200, 49, 40, 10
+    LTEXT "Parallelism for password hash:", IDC_ARGON2_PARALLEL_STATIC,
+        5, 64, 115, 8
+    EDITTEXT IDC_ARGON2_PARALLEL, 120, 62, 60, 12
+    DEFPUSHBUTTON "O&K", IDOK, 70, 80, 40, 14
+    PUSHBUTTON "&Cancel", IDCANCEL, 130, 80, 40, 14
 END
 
 #include "version.rc2"
