--- a/windows/pageant.rc
+++ b/windows/pageant.rc
@@ -14,14 +14,27 @@
 
 210 DIALOG DISCARDABLE 0, 0, 140, 60
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
-CAPTION "Pageant: Enter Passphrase"
+CAPTION "Pageant: Loading Encrypted Key"
 FONT 8, "MS Shell Dlg"
 BEGIN
-    CTEXT "Enter passphrase for key", 100, 10, 6, 120, 8
+    CTEXT "Enter passphrase to load key", 100, 10, 6, 120, 8
     CTEXT "", 101, 10, 16, 120, 8
     EDITTEXT 102, 10, 26, 120, 12, ES_PASSWORD | ES_AUTOHSCROLL
     DEFPUSHBUTTON "O&K", IDOK, 20, 42, 40, 14
     PUSHBUTTON "&Cancel", IDCANCEL, 80, 42, 40, 14
+END
+
+212 DIALOG DISCARDABLE 0, 0, 250, 70
+STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
+CAPTION "Pageant: Decrypting Stored Key"
+FONT 8, "MS Shell Dlg"
+BEGIN
+    CTEXT "A client of Pageant wants to use the following encrypted key:", 100, 10, 6, 230, 8
+    CTEXT "", 101, 10, 16, 230, 8
+    CTEXT "If you intended this, enter the passphrase to decrypt the key.", 101, 10, 26, 230, 8
+    EDITTEXT 102, 10, 36, 230, 12, ES_PASSWORD | ES_AUTOHSCROLL
+    DEFPUSHBUTTON "O&K", IDOK, 75, 52, 40, 14
+    PUSHBUTTON "&Cancel", IDCANCEL, 135, 52, 40, 14
 END
 
 211 DIALOG DISCARDABLE 0, 0, 450, 211
