winpgnt: GUI actions to add keys encrypted.
I've added a new option to the system tray menu, and a new button to
the key list window.

--- a/windows/pageant.rc
+++ b/windows/pageant.rc
@@ -45,6 +45,7 @@ BEGIN
     LISTBOX 100, 10, 10, 420, 155,
         LBS_EXTENDEDSEL | LBS_HASSTRINGS | LBS_USETABSTOPS | WS_VSCROLL | WS_TABSTOP
     PUSHBUTTON "&Add Key", 101, 75, 187, 60, 14
+    PUSHBUTTON "Add Key (&encrypted)", 110, 150, 187, 100, 14
     PUSHBUTTON "&Remove Key", 102, 315, 187, 60, 14
     PUSHBUTTON "&Help", 103, 10, 187, 50, 14
     DEFPUSHBUTTON "&Close", IDOK, 390, 187, 50, 14
