--- a/windows/pageant.rc
+++ b/windows/pageant.rc
@@ -7,73 +7,81 @@
 #define APPNAME "Pageant"
 #define APPDESC "PuTTY SSH authentication agent"
 
+#include "pageant-rc.h"
+
 #include "winhelp.rc2"
 
-200 ICON "pageant.ico"
-201 ICON "pageants.ico"
+IDI_MAINICON ICON "pageant.ico"
+IDI_TRAYICON ICON "pageants.ico"
 
-210 DIALOG DISCARDABLE 0, 0, 140, 60
+IDD_LOAD_PASSPHRASE DIALOG DISCARDABLE 0, 0, 140, 60
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Pageant: Loading Encrypted Key"
 FONT 8, "MS Shell Dlg"
 BEGIN
-    CTEXT "Enter passphrase to load key", 100, 10, 6, 120, 8
-    CTEXT "", 101, 10, 16, 120, 8
-    EDITTEXT 102, 10, 26, 120, 12, ES_PASSWORD | ES_AUTOHSCROLL
+    CTEXT "Enter passphrase to load key", IDC_PASSPHRASE_STATIC1, 10, 6, 120, 8
+    CTEXT "", IDC_PASSPHRASE_FINGERPRINT, 10, 16, 120, 8
+    EDITTEXT IDC_PASSPHRASE_EDITBOX, 10, 26, 120, 12,
+        ES_PASSWORD | ES_AUTOHSCROLL
     DEFPUSHBUTTON "O&K", IDOK, 20, 42, 40, 14
     PUSHBUTTON "&Cancel", IDCANCEL, 80, 42, 40, 14
 END
 
-212 DIALOG DISCARDABLE 0, 0, 250, 70
+IDD_ONDEMAND_PASSPHRASE DIALOG DISCARDABLE 0, 0, 250, 70
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Pageant: Decrypting Stored Key"
 FONT 8, "MS Shell Dlg"
 BEGIN
-    CTEXT "A client of Pageant wants to use the following encrypted key:", 100, 10, 6, 230, 8
-    CTEXT "", 101, 10, 16, 230, 8
-    CTEXT "If you intended this, enter the passphrase to decrypt the key.", 101, 10, 26, 230, 8
-    EDITTEXT 102, 10, 36, 230, 12, ES_PASSWORD | ES_AUTOHSCROLL
+    CTEXT "A client of Pageant wants to use the following encrypted key:",
+        IDC_PASSPHRASE_STATIC1, 10, 6, 230, 8
+    CTEXT "", IDC_PASSPHRASE_FINGERPRINT, 10, 16, 230, 8
+    CTEXT "If you intended this, enter the passphrase to decrypt the key.",
+        IDC_PASSPHRASE_STATIC2, 10, 26, 230, 8
+    EDITTEXT IDC_PASSPHRASE_EDITBOX, 10, 36, 230, 12,
+        ES_PASSWORD | ES_AUTOHSCROLL
     DEFPUSHBUTTON "O&K", IDOK, 75, 52, 40, 14
     PUSHBUTTON "&Cancel", IDCANCEL, 135, 52, 40, 14
 END
 
-211 DIALOG DISCARDABLE 0, 0, 450, 211
+IDD_KEYLIST DIALOG DISCARDABLE 0, 0, 450, 211
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Pageant Key List"
 FONT 8, "MS Shell Dlg"
 BEGIN
     LISTBOX 100, 10, 10, 420, 155,
         LBS_EXTENDEDSEL | LBS_HASSTRINGS | LBS_USETABSTOPS | WS_VSCROLL | WS_TABSTOP
-    PUSHBUTTON "&Add Key", 101, 75, 187, 60, 14
-    PUSHBUTTON "Add Key (&encrypted)", 110, 150, 187, 100, 14
-    PUSHBUTTON "&Remove Key", 102, 315, 187, 60, 14
-    PUSHBUTTON "&Help", 103, 10, 187, 50, 14
+    PUSHBUTTON "&Add Key", IDC_KEYLIST_ADDKEY, 75, 187, 60, 14
+    PUSHBUTTON "Add Key (&encrypted)", IDC_KEYLIST_ADDKEY_ENC, 150, 187, 100, 14
+    PUSHBUTTON "&Remove Key", IDC_KEYLIST_REMOVE, 315, 187, 60, 14
+    PUSHBUTTON "&Help", IDC_KEYLIST_HELP, 10, 187, 50, 14
     DEFPUSHBUTTON "&Close", IDOK, 390, 187, 50, 14
-    LTEXT "&Fingerprint type:", 104, 10, 172, 60, 8
-    COMBOBOX 105, 70, 170, 60, 12, CBS_DROPDOWNLIST
+    LTEXT "&Fingerprint type:", IDC_KEYLIST_FPTYPE_STATIC, 10, 172, 60, 8
+    COMBOBOX IDC_KEYLIST_FPTYPE, 70, 170, 60, 12, CBS_DROPDOWNLIST
 END
 
 /* Accelerators used: cl */
-213 DIALOG DISCARDABLE 140, 40, 270, 136
+IDD_ABOUT DIALOG DISCARDABLE 140, 40, 270, 136
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "About Pageant"
 FONT 8, "MS Shell Dlg"
 BEGIN
     DEFPUSHBUTTON "&Close", IDOK, 216, 118, 48, 14
-    PUSHBUTTON "View &Licence", 101, 6, 118, 70, 14
-    PUSHBUTTON "Visit &Web Site", 102, 140, 118, 70, 14
-    EDITTEXT 1000, 10, 6, 250, 110, ES_READONLY | ES_MULTILINE | ES_CENTER, WS_EX_STATICEDGE
+    PUSHBUTTON "View &Licence", IDC_ABOUT_LICENCE, 6, 118, 70, 14
+    PUSHBUTTON "Visit &Web Site", IDC_ABOUT_WEBSITE, 140, 118, 70, 14
+    EDITTEXT IDC_ABOUT_TEXTBOX, 10, 6, 250, 110,
+        ES_READONLY | ES_MULTILINE | ES_CENTER, WS_EX_STATICEDGE
 END
 
 /* No accelerators used */
-214 DIALOG DISCARDABLE 50, 50, 326, 239
+IDD_LICENCE DIALOG DISCARDABLE 50, 50, 326, 239
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "PuTTY Licence"
 FONT 8, "MS Shell Dlg"
 BEGIN
     DEFPUSHBUTTON "OK", IDOK, 148, 219, 44, 14
 
-    EDITTEXT 1000, 10, 10, 306, 200, ES_READONLY | ES_MULTILINE | ES_LEFT, WS_EX_STATICEDGE
+    EDITTEXT IDC_LICENCE_TEXTBOX, 10, 10, 306, 200,
+        ES_READONLY | ES_MULTILINE | ES_LEFT, WS_EX_STATICEDGE
 END
 
 #include "version.rc2"
