winpgnt: add GUI button to re-encrypt an SSH-2 key.

--- a/windows/pageant.rc
+++ b/windows/pageant.rc
@@ -43,18 +43,19 @@ BEGIN
     PUSHBUTTON "&Cancel", IDCANCEL, 135, 52, 40, 14
 END
 
-IDD_KEYLIST DIALOG DISCARDABLE 0, 0, 450, 211
+IDD_KEYLIST DIALOG DISCARDABLE 0, 0, 450, 236
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Pageant Key List"
 FONT 8, "MS Shell Dlg"
 BEGIN
     LISTBOX 100, 10, 10, 420, 155,
         LBS_EXTENDEDSEL | LBS_HASSTRINGS | LBS_USETABSTOPS | WS_VSCROLL | WS_TABSTOP
-    PUSHBUTTON "&Add Key", IDC_KEYLIST_ADDKEY, 75, 187, 60, 14
-    PUSHBUTTON "Add Key (&encrypted)", IDC_KEYLIST_ADDKEY_ENC, 150, 187, 100, 14
-    PUSHBUTTON "&Remove Key", IDC_KEYLIST_REMOVE, 315, 187, 60, 14
-    PUSHBUTTON "&Help", IDC_KEYLIST_HELP, 10, 187, 50, 14
-    DEFPUSHBUTTON "&Close", IDOK, 390, 187, 50, 14
+    PUSHBUTTON "&Add Key", IDC_KEYLIST_ADDKEY, 10, 187, 60, 14
+    PUSHBUTTON "Add Key (&encrypted)", IDC_KEYLIST_ADDKEY_ENC, 75, 187, 80, 14
+    PUSHBUTTON "Re-e&ncrypt", IDC_KEYLIST_REENCRYPT, 315, 187, 60, 14
+    PUSHBUTTON "&Remove", IDC_KEYLIST_REMOVE, 380, 187, 60, 14
+    PUSHBUTTON "&Help", IDC_KEYLIST_HELP, 10, 212, 50, 14
+    DEFPUSHBUTTON "&Close", IDOK, 390, 212, 50, 14
     LTEXT "&Fingerprint type:", IDC_KEYLIST_FPTYPE_STATIC, 10, 172, 60, 8
     COMBOBOX IDC_KEYLIST_FPTYPE, 70, 170, 60, 12, CBS_DROPDOWNLIST
 END
