Build various unit-test main() programs in utils.
I found these while going through the code, and decided if we're going
to have them then we should compile them. They didn't all compile
first time, proving my point :-)

I've enhanced the tree234 test so that it has a verbose option, which
by default is off.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -145,6 +145,21 @@ add_executable(testcrypt
 target_link_libraries(testcrypt
   keygen crypto utils ${platform_libraries})
 
+add_executable(test_host_strfoo
+  utils/host_strchr_internal.c)
+target_compile_definitions(test_host_strfoo PRIVATE TEST)
+target_link_libraries(test_host_strfoo utils ${platform_libraries})
+
+add_executable(test_tree234
+  utils/tree234.c)
+target_compile_definitions(test_tree234 PRIVATE TEST)
+target_link_libraries(test_tree234 utils ${platform_libraries})
+
+add_executable(test_wildcard
+  utils/wildcard.c)
+target_compile_definitions(test_wildcard PRIVATE TEST)
+target_link_libraries(test_wildcard utils ${platform_libraries})
+
 add_compile_definitions(HAVE_CMAKE_H)
 
 foreach(subdir ${PLATFORM_SUBDIRS})
