Break up x11fwd.c.
This is a module that I'd noticed in the past was too monolithic.
There's a big pile of stub functions in uxpgnt.c that only have to be
there because the implementation of true X11 _forwarding_ (i.e.
actually managing a channel within an SSH connection), which Pageant
doesn't need, was in the same module as more general X11-related
utility functions which Pageant does need.

So I've broken up this awkward monolith. Now x11fwd.c contains only
the code that really does all go together for dealing with SSH X
forwarding: the management of an X forwarding channel (including the
vtables to make it behave as Channel at the SSH end and a Plug at the
end that connects to the local X server), and the management of
authorisation for those channels, including maintaining a tree234 of
possible auth values and verifying the one we received.

Most of the functions removed from this file have moved into the utils
subdir, and also into the utils library (i.e. further down the link
order), because they were basically just string and data processing.

One exception is x11_setup_display, which parses a display string and
returns a struct telling you everything about how to connect to it.
That talks to the networking code (it does name lookups and makes a
SockAddr), so it has to live in the network library rather than utils,
and therefore it's not in the utils subdirectory either.

The other exception is x11_get_screen_number, which it turned out
nothing called at all! Apparently the job it used to do is now done as
part of x11_setup_display. So I've just removed it completely.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,6 +52,12 @@ add_library(utils STATIC
   utils/wcwidth.c
   utils/wildcard.c
   utils/write_c_string_literal.c
+  utils/x11authfile.c
+  utils/x11authnames.c
+  utils/x11_dehexify.c
+  utils/x11_identify_auth_proto.c
+  utils/x11_make_greeting.c
+  utils/x11_parse_ip.c
   ${GENERATED_COMMIT_C})
 
 add_library(logging OBJECT
@@ -78,7 +84,7 @@ add_library(crypto STATIC
   cproxy.c)
 
 add_library(network STATIC
-  be_misc.c nullplug.c errsock.c proxy.c logging.c)
+  be_misc.c nullplug.c errsock.c proxy.c logging.c x11disp.c)
 
 add_library(keygen STATIC
   millerrabin.c mpunsafe.c pockle.c primecandidate.c smallprimes.c
