Fix a few cmake configure-time checks.
A couple of actual checks were missing (elf_aux_info, sysctlbyname).
Several more were accidentally left out of cmake.h.in, meaning they
wouldn't be propagated from cmake's variable space into the actual
compilation. And a handful of checks in the C source were still using
the autotools-style 'if defined' in place of the cmake-style "it's
always 0 or 1" plain #if.

--- a/cmake/cmake.h.in
+++ b/cmake/cmake.h.in
@@ -16,6 +16,11 @@
 
 #cmakedefine NOT_X_WINDOWS
 
+#cmakedefine01 HAVE_ASM_HWCAP_H
+#cmakedefine01 HAVE_SYS_AUXV_H
+#cmakedefine01 HAVE_SYS_SYSCTL_H
+#cmakedefine01 HAVE_SYS_TYPES_H
+#cmakedefine01 HAVE_GLOB_H
 #cmakedefine01 HAVE_FUTIMES
 #cmakedefine01 HAVE_GETADDRINFO
 #cmakedefine01 HAVE_POSIX_OPENPT
@@ -28,6 +33,8 @@
 #cmakedefine01 HAVE_SETPWENT
 #cmakedefine01 HAVE_ENDPWENT
 #cmakedefine01 HAVE_GETAUXVAL
+#cmakedefine01 HAVE_ELF_AUX_INFO
+#cmakedefine01 HAVE_SYSCTLBYNAME
 #cmakedefine01 HAVE_CLOCK_MONOTONIC
 #cmakedefine01 HAVE_CLOCK_GETTIME
 #cmakedefine01 HAVE_SO_PEERCRED
