Add missing dependencies on generated source files.
The utils library shouldn't be built until cmake_commit.c exists, and
similarly with the charset library and sbcsdat.c.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,6 +60,7 @@ add_library(utils STATIC
   utils/x11_make_greeting.c
   utils/x11_parse_ip.c
   ${GENERATED_COMMIT_C})
+add_dependencies(utils cmake_commit_c)
 
 add_library(logging OBJECT
   logging.c)
