PuTTYgen: use the term "passphrase hash".
PuTTYgen and its documentation are pretty consistent about calling their
encryption key a 'passphrase', as opposed to a 'password' supplied
directly to a server; but the Argon2 parameters UI reverted to
'password hash', which seemed unecessarily confusing.

I think it's better to use the term 'passphrase' consistently in the UI.
(People who are used to Argon2 being called a 'password hash' can
probably deal.)

This required tweaking the coordinates of the Windows PuTTYgen UI.

--- a/windows/puttygen.rc
+++ b/windows/puttygen.rc
@@ -54,32 +54,32 @@ BEGIN
     EDITTEXT 1000, 10, 10, 306, 200, ES_READONLY | ES_MULTILINE | ES_LEFT, WS_EX_STATICEDGE
 END
 
-215 DIALOG DISCARDABLE 0, 0, 255, 98
+215 DIALOG DISCARDABLE 0, 0, 259, 98
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "PuTTYgen: Private Key File Parameters"
 FONT 8, "MS Shell Dlg"
 BEGIN
-    LTEXT "PPK file version:", IDC_PPKVER_STATIC, 5, 6, 115, 8
-    AUTORADIOBUTTON "2", IDC_PPKVER_2, 120, 5, 30, 10, WS_GROUP
-    AUTORADIOBUTTON "3", IDC_PPKVER_3, 150, 5, 30, 10
-    LTEXT "Key derivation function:", IDC_KDF_STATIC, 5, 22, 115, 8
-    AUTORADIOBUTTON "Argon2id", IDC_KDF_ARGON2ID, 120, 21, 45, 10, WS_GROUP
-    AUTORADIOBUTTON "Argon2i", IDC_KDF_ARGON2I, 165, 21, 45, 10, WS_GROUP
-    AUTORADIOBUTTON "Argon2d", IDC_KDF_ARGON2D, 210, 21, 45, 10
-    LTEXT "Memory to use for password hash:", IDC_ARGON2_MEM_STATIC,
-        5, 36, 115, 8
-    EDITTEXT IDC_ARGON2_MEM, 120, 34, 40, 12
-    LTEXT "Kbyte", IDC_ARGON2_MEM_STATIC2, 170, 36, 34, 8
-    LTEXT "Time to use for password hash:", IDC_ARGON2_TIME_STATIC,
-        5, 50, 115, 8
-    EDITTEXT IDC_ARGON2_TIME, 120, 48, 40, 12
-    AUTORADIOBUTTON "ms", IDC_PPK_AUTO_YES, 170, 49, 20, 10, WS_GROUP
-    AUTORADIOBUTTON "passes", IDC_PPK_AUTO_NO, 200, 49, 40, 10
-    LTEXT "Parallelism for password hash:", IDC_ARGON2_PARALLEL_STATIC,
-        5, 64, 115, 8
-    EDITTEXT IDC_ARGON2_PARALLEL, 120, 62, 60, 12
+    LTEXT "PPK file version:", IDC_PPKVER_STATIC, 5, 6, 119, 8
+    AUTORADIOBUTTON "2", IDC_PPKVER_2, 124, 5, 30, 10, WS_GROUP
+    AUTORADIOBUTTON "3", IDC_PPKVER_3, 154, 5, 30, 10
+    LTEXT "Key derivation function:", IDC_KDF_STATIC, 5, 22, 119, 8
+    AUTORADIOBUTTON "Argon2id", IDC_KDF_ARGON2ID, 124, 21, 45, 10, WS_GROUP
+    AUTORADIOBUTTON "Argon2i", IDC_KDF_ARGON2I, 169, 21, 45, 10, WS_GROUP
+    AUTORADIOBUTTON "Argon2d", IDC_KDF_ARGON2D, 214, 21, 45, 10
+    LTEXT "Memory to use for passphrase hash:", IDC_ARGON2_MEM_STATIC,
+        5, 36, 119, 8
+    EDITTEXT IDC_ARGON2_MEM, 124, 34, 40, 12
+    LTEXT "Kbyte", IDC_ARGON2_MEM_STATIC2, 174, 36, 34, 8
+    LTEXT "Time to use for passphrase hash:", IDC_ARGON2_TIME_STATIC,
+        5, 50, 119, 8
+    EDITTEXT IDC_ARGON2_TIME, 124, 48, 40, 12
+    AUTORADIOBUTTON "ms", IDC_PPK_AUTO_YES, 174, 49, 20, 10, WS_GROUP
+    AUTORADIOBUTTON "passes", IDC_PPK_AUTO_NO, 204, 49, 40, 10
+    LTEXT "Parallelism for passphrase hash:", IDC_ARGON2_PARALLEL_STATIC,
+        5, 64, 119, 8
+    EDITTEXT IDC_ARGON2_PARALLEL, 124, 62, 60, 12
     DEFPUSHBUTTON "O&K", IDOK, 70, 80, 40, 14
-    PUSHBUTTON "&Cancel", IDCANCEL, 130, 80, 40, 14
+    PUSHBUTTON "&Cancel", IDCANCEL, 134, 80, 40, 14
 END
 
 #include "version.rc2"
