Fix the SHA-NI cmake-time check.
When preparing commit fca13a17b160da3, I redesigned the cmake test
function at the last minute, and apparently didn't quite get all the
call sites correctly rewritten. This one still omitted some of the
argument-type keywords, and had an obsolete parameter giving an
explicit name for a sub-library, which I later decided wasn't needed.

--- a/crypto/CMakeLists.txt
+++ b/crypto/CMakeLists.txt
@@ -117,8 +117,8 @@ if(HAVE_WMMINTRIN_H)
       #include <immintrin.h>
       ${include_shaintrin}
       volatile __m128i r, a, b, c;
-      int main(void) { r = _mm_sha256rnds2_epu32(a, b, c); }
-      " sha-ni sha256-ni.c sha1-ni.c)
+      int main(void) { r = _mm_sha256rnds2_epu32(a, b, c); }"
+    ADD_SOURCES_IF_SUCCESSFUL sha256-ni.c sha1-ni.c)
 endif()
 
 # ----------------------------------------------------------------------
