Move other backends into a subdirectory.
This is the last of the subdirectory creations I had planned. This one
is almost too footling to bother with (it hardly declutters the top
level very much).

One useful side effect is that I've included testback.c (containing
the null and loopback backends) in the otherbackends library, which
means it will now actually be _compiled_ even when nothing's using it,
and we'll spot bit-rot promptly when internal APIs change.

(And, to prove the point, I've immediately had to fix some bit-rot.)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,9 +51,9 @@ add_library(sftpclient STATIC
 add_subdirectory(ssh)
 
 add_library(otherbackends STATIC
-  telnet.c rlogin.c raw.c supdup.c
   $<TARGET_OBJECTS:all-backends>
   $<TARGET_OBJECTS:logging>)
+add_subdirectory(otherbackends)
 
 add_executable(testcrypt
   testcrypt.c sshpubk.c ssh/crc-attack-detector.c)
