winpgnt: add a help button to async passphrase prompt.
Suggested by Jacob: if this dialog box is going to pop up
_unexpectedly_ - perhaps when people have momentarily forgotten
they're even running Pageant, or at least forgotten they added a key
encrypted,, or maybe haven't found out yet that their IT installed it
- then it could usefully come with a help button that pops up further
explanation of what the dialog box means, and from which you can find
your way to the rest of the help.

--- a/windows/pageant.rc
+++ b/windows/pageant.rc
@@ -41,8 +41,9 @@ BEGIN
         IDC_PASSPHRASE_STATIC3, 10, 34, 230, 8
     EDITTEXT IDC_PASSPHRASE_EDITBOX, 10, 44, 230, 12,
         ES_PASSWORD | ES_AUTOHSCROLL
-    DEFPUSHBUTTON "O&K", IDOK, 75, 60, 40, 14
-    PUSHBUTTON "&Cancel", IDCANCEL, 135, 60, 40, 14
+    DEFPUSHBUTTON "O&K", IDOK, 45, 60, 40, 14
+    PUSHBUTTON "&Cancel", IDCANCEL, 105, 60, 40, 14
+    PUSHBUTTON "&Help", IDHELP, 165, 60, 50, 14
 END
 
 IDD_KEYLIST DIALOG DISCARDABLE 0, 0, 450, 236
