--- a/windows/puttytel.rc
+++ b/windows/puttytel.rc
@@ -3,8 +3,8 @@
 #define APPNAME "PuTTYtel"
 #define APPDESC "Telnet and Rlogin client"
 
-#include "winhelp.rc2"
-#include "win_res.rc2"
+#include "help.rc2"
+#include "putty-common.rc2"
 
 #ifndef NO_MANIFESTS
 1 RT_MANIFEST "puttytel.mft"
