--- a/windows/putty.rc
+++ b/windows/putty.rc
@@ -3,8 +3,8 @@
 #define APPNAME "PuTTY"
 #define APPDESC "SSH, Telnet, Rlogin, and SUPDUP client"
 
-#include "winhelp.rc2"
-#include "win_res.rc2"
+#include "help.rc2"
+#include "putty-common.rc2"
 
 #ifndef NO_MANIFESTS
 1 RT_MANIFEST "putty.mft"
